prevent tweet overflow in tweet container

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -70,6 +70,8 @@ border-radius: 4px; */
   font-weight: 300;
   font-size: medium;
   overflow-wrap: break-word;
+  max-width:900px; 
+
  
 }
 .tweet footer {
